--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "agenx-backend",
   "version": "1.0.0",
   "description": "Backend for AI agent marketplace",
-  "main": "dist/server.js",
+  "main": "dist/core/server.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start": "node dist/core/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/core/server.ts",
     "test": "jest",
     "typecheck": "tsc --noEmit"
   },
