--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.31.0",
+    "@types/js-yaml": "^4.0.9",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
@@ -23,6 +24,7 @@
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.0.1",
     "helmet": "^8.1.0",
+    "js-yaml": "^4.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
